IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
12/19/11: IMOD_4-3-4
12/19/11: Updated program list for hyperlinks in man page (In 4.3).

12/19/11: IMOD_4-3-3
12/18/11: IMOD_4-3-2
12/18/11: Fixed imodpsview and install script for change in tcsh behavior
(In 4.3).

12/2/11: Fixed test for whether copying from current object in object edit 
dialog (In 4.3).

12/2/11: Fixed explosion of memory usage in undo-redo module when combining
objects or moving all contours from one to another (In 4.3).

12/1/11: Fixed 3dmod crash when deleting object with no current contour is set
(In 4.3).

11/29/11: Fixed crash when current surface only is selected in Model View Edit
Objects window and there are empty contours (In 4.3).

11/29/11: Fixed initial height of Info window when there is a long filename
(In 4.3).

11/29/11: Changes to Noske plugins; livewire works in blocks (In 4.3).

11/28/11: Fixed Last Fill Color button in finegrain dialog (In 4.3).

11/22/11: Fixed pysed.py to allow ^ and + in filenames again (In 4.3).

11/18/11: In eTomo - Final Aligned Stack, added OffsetToAdd to the Ctfplotter
dialog (In 4.3).(Bug# 1581)

11/17/11: Added option to Ctfplotter to specify a data offset, and made it
detect need for offset automatically with FEI data (In 4.3).

11/17/11: Fixed Rotatevol problem when run on a volume with NZ = 1 (In 4.3).

11/9/11: In eTomo - Fiducial Model, fixed failure in patch tracking when the
there is an existing tilt file (In 4.3).(Bug# 1547)

11/9/11: IMOD_4-3-1
11/9/11: In Beadfixer, fixed extra redraws when moving by residual in all 
local areas (In 4.3).

11/8/11: In eTomo - Fiducial Model, pulling the tilt angle specs from
xcorr.com into xcorr_pt.com (In 4.3).(Bug# 1547)

11/5/11: In Processchunks, fixed very long delay when many chunks fail right
away and problem recognizing when all machines have failed (In 4.3).

11/2/11: Fixed problem with Edgepatches/Tomostitch when there are tabs in the